--- a/index.html
+++ b/index.html
@@ -10,12 +10,20 @@
 <body class="marding-5">
 
 	<nav class="left-bar">
-		<ul>
-			<li>Home</li>
-			<li>Post</li>
-			<li>History</li>
-			<li>Game</li>
-		</ul>
+		<ul class="menu">
+			<li>
+			  <a href="#"><img src="./home.png" width="20%" height="20%"></a>
+			</li>
+			<li>
+			  <a href="#"><img src="./post.png" width="20%" height="20%"></a>
+			</li>
+			<li>
+			  <a href="#"><img src="./history.png" width="20%" height="20%"></a>
+			</li>
+			<li>
+			  <a href="#"><img src="./game.png" width="20%" height="20%"></a>
+			</li>
+		  </ul>
 	</nav>
 	
 	<div class="firststep center"><br>
