--- a/post-list.html
+++ b/post-list.html
@@ -33,30 +33,22 @@
 		</p>
 		<hr>
 		<ul class="marding-5">
-		  <li> 나의 이름은 </li>
+		  <li> Blog 작성글 리스트 </li>
 		</ul>
 		<hr>
 	  </div><br>
 
-	  <div class="middle marding-7 center" style="">
-		<br>
-		<p>별자리 블로그 자기소개</p>
-		<p>2022년</p>
-		<img src="welcome.jpg" width="60%" height="40%"/>
-		<br>
-		<br>
-		<p>안녕하세요 본교육과정에 함께하게된,</p>
-		<p>조승현이라 합니다</p>
-		<p>저의 소개를 간단하게 하자면</p>
-		<p>전공이라 할만한건 아직은 없습니다,</p>
-		<p>머지않아 전공이 프로그래머라고</p>
-		<p>말할 수 있게 노력 ing.. 입니다</p>
-		<p>이 블로그는 앞으로 저의 프로그래머 로서</p>
-		<p>배워가는 스킬들을 기록하고</p>
-		<p>자료를 남기는 것에 사용하려 합니다</p>
-		<p>앞으로 잘 부탁 드립니다</p>
-		<p>감삼다</p>
+	  <div class="middle marding-7 center" >
 		
+		<ul>
+			<p class="h3">2022년 11월</p><br>
+			<li><a href="./post/11-18-hw.html">11월 18일 [리눅스 2일차 과제 < 하이퍼 바이저 >]</a></li><br>
+			<li><a href="./post/11-21-ncp.html">11월 21일 [리눅스 3일차 < 파일 버전관리 시스템 >]</a></li><br>
+			<li><a href="./post/11-22-ncp.html">11월 22일 [리눅스 4일차 < Git 브랜치 >]</a></li><br>
+			<li><a href="./post/11-23-ncp.html">11월 23일 [리눅스 5일차 < 반응형 웹 디자인 >]</a></li><br>
+			<li><a href="./post/11-23-hw.html">11월 23일 [리눅스 5일차 과제 < 리눅스 기본명령어 >]</a></li><br>
+			<li><a href="./post/11-24-ncp.html">11월 24일 [리눅스 6일차 < HTML >]</a></li><br>
+		</ul>
 		
 	  </div><br>
 
